--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>What languge is right for you?</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="js/scripts.js"></script>
-  <h1>Survey </h1>
-</head>
-<body>
+  <head>
+    <title>What languge is right for you?</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </head>
+  <body>
+    <h1>Survey Says...</h1>
+    <form id="survey">
+      <p>Do prefer backend or frontend development?</p>
+      <div class="radio">
+       <label>
+         <input type="radio" name="1" value="back">
+         Back-end
+       </label>
+     </div>
+     <div class="radio">
+          <label>
+            <input type="radio" name="1" value="front">
+            Front-end
+          </label>
+        </div>
+
+
+
+
+
 
 
 
