--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>What languge is right for you?</title>
+    <title>What language is right for you?</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
@@ -9,25 +9,83 @@
   <body>
     <h1>Survey Says...</h1>
     <form id="survey">
-      <p>Do prefer backend or frontend development?</p>
+      <p>Do prefer back-end or front-end development?</p>
       <div class="radio">
-       <label>
-         <input type="radio" name="1" value="back">
-         Back-end
-       </label>
-     </div>
-     <div class="radio">
-          <label>
-            <input type="radio" name="1" value="front">
-            Front-end
-          </label>
-        </div>
-
-
-
-
-
-
+        <label>
+          <input type="radio" name="1" value="back">
+          Back-end
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="1" value="front">
+          Front-end
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="1" value="both">
+          Both
+        </label>
+      </div>
+      <p>What platform would you like to develop for?</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="2" value="mobile">
+          Mobile
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="2" value="desktop">
+          Desktop
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="2" value="network">
+          Network Servers
+        </label>
+      </div>
+      <p>Is ease of learning a concern to you?</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="3" value="Yes">
+          Yes
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="1" value="No">
+          No
+        </label>
+      </div>
+      <p>What type of work enviroment do you prefer</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="4" value="large">
+          Large corporation/enterprise
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="4" value="modest">
+          Modestly sized startup
+        </label>
+      </div>
+      <p>Which side of the programming coin interests you more?</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="5" value="ui">
+          UI (user interface side)
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="5" value="logic">
+          Logic (algorithmic side)
+        </label>
+      </div>
 
 
 
