added submit button and container for body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
+   <div class="container-fluid">
     <h1>Survey Says...</h1>
     <form id="survey">
       <p>Do prefer back-end or front-end development?</p>
@@ -73,7 +74,7 @@
           Modestly sized startup
         </label>
       </div>
-      <p>Which side of the programming coin interests you more?</p>
+      <p>Which side of the programming coin interests you</p>
       <div class="radio">
         <label>
           <input type="radio" name="5" value="ui">
@@ -86,7 +87,9 @@
           Logic (algorithmic side)
         </label>
       </div>
-
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
 
 
 
