--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
    <div class="container-fluid">
@@ -89,10 +90,21 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+    <div class="csharp">
+      <h2>Your best bet is C#/.net!</h2>
+    </div>
+    <div class="ruby">
+      <h2>Your best bet is Ruby/Rails!</h2>
+    </div>
+    <div class="css">
+      <h2>Your best bet is CSS/Design!</h2>
+    </div>
+    <div class="android">
+      <h2>Your best bet is Java/Android!</h2>
+    </div>
+
+
   </div>
-
-
-
-
-  </body>
+</body>
 </html>
