fixed mismatched names for variables

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       <p>Is ease of learning a concern to you?</p>
       <div class="radio">
         <label>
-          <input type="radio" name="3" value="Yes">
+          <input type="radio" name="3" value="yes">
           Yes
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="1" value="No">
+          <input type="radio" name="3" value="no">
           No
         </label>
       </div>
@@ -103,7 +103,6 @@
     <div class="android">
       <h2>Your best bet is Java/Android!</h2>
     </div>
-
 
   </div>
 </body>
