--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div class="container-fluid">
     <h1>Survey Says...</h1>
     <form id="survey">
-      <p>Do prefer back-end or front-end development?</p>
+      <p>Do you prefer back-end or front-end development?</p>
       <div class="radio">
         <label>
           <input type="radio" name="1" value="back">
@@ -89,9 +89,8 @@
         </label>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-
-    <div class="csharp">
+      </form>
+      <div class="csharp">
       <h2>Your best bet is C#/.net!</h2>
     </div>
     <div class="ruby">
